mostly db related changes see below ...
started with making table, schema surrounded by quotes to allow CaseSensitive naming ( at the moment this is hardcoded in Dialect )
some refactoring JDK old to JDK 11